# Practicas-informatica-grafica-y-visual-UJA

Practica1_IGV/: Practica1_IGV.sln
Practica1_IGV/Practica1_IGV/: Practica1_IGV.vcxproj  Practica1_IGV.vcxproj.filters
Practica1_IGV/Practica1_IGV/Debug/: Practica1_IGV.exe.recipe  Practica1_IGV.ilk  vc142.idb
Practica1_IGV/codigo/: igvInterfaz.cpp  igvInterfaz.h
Practica2_IGV/: Practica2_IGV.sln
Practica2_IGV/Practica2_IGV/: Practica2_IGV.vcxproj  Practica2_IGV.vcxproj.filters
Practica2_IGV/Practica2_IGV/Debug/: Practica2_IGV.exe.recipe  Practica2_IGV.ilk  vc142.idb
Practica2_IGV/codigo/: igvEscena3D.cpp  igvEscena3D.h  igvInterfaz.cpp
Practica2b_IGV/: Practica2b_IGV.sln
Practica2b_IGV/Practica2b_IGV/: Practica2b_IGV.vcxproj  Practica2b_IGV.vcxproj.filters
Practica2b_IGV/Practica2b_IGV/Debug/: Practica2b_IGV.exe.recipe  Practica2b_IGV.ilk  vc142.idb
Practica2b_IGV/codigo/: igvCamara.cpp  igvCamara.h  igvInterfaz.cpp  igvInterfaz.h
Practica3a_IGV/: Practica3a_IGV.sln
Practica3a_IGV/Practica3a_IGV/: Practica3a_IGV.vcxproj  Practica3a_IGV.vcxproj.filters
Practica3a_IGV/Practica3a_IGV/Debug/: vc142.idb  (+2 more)
Practica3a_IGV/codigo/: igvCilindro.cpp  igvCilindro.h  igvEscena3D.cpp  igvEscena3D.h  igvInterfaz.cpp  igvMallaTriangulos.cpp  igvMallaTriangulos.h  pr3a.cpp
Practica3b_IGV/: CMakeLists.txt  igvEscena3D.cpp  igvEscena3D.h  igvInterfaz.cpp  igvInterfaz.h
Practica3c_IGV/: CMakeLists.txt  igvCaja.cpp  igvCaja.h  igvEscena3D.cpp  igvEscena3D.h  igvInterfaz.cpp  igvInterfaz.h  pr3c.cpp
Practica4_IGV/: CMakeLists.txt  igvEscena3D.cpp  igvEscena3D.h  igvFuenteLuz.cpp  igvFuenteLuz.h  igvInterfaz.cpp  igvMaterial.cpp  igvTextura.cpp  igvTextura.h
Proyecto_final/: CMakeLists.txt  Utils.cpp  Utils.h  igvCamara.cpp  igvCamara.h  igvEscena3D.cpp  igvEscena3D.h  igvInterfaz.cpp  igvInterfaz.h  igvPunto3D.h  pr3b.cpp
proyectoIGV/proyectoIGV/: Face.cpp  Face.h  igvCamara.cpp  igvCamara.h  igvColor.h  igvEscena3D.cpp  igvEscena3D.h  igvFuenteLuz.cpp  igvFuenteLuz.h  igvInterfaz.cpp  igvInterfaz.h  igvMaterial.cpp  igvMaterial.h  igvPunto3D.cpp  igvPunto3D.h  igvTextura.cpp  igvTextura.h  pr3b.cpp
proyectoIGV/proyectoIGV.xcodeproj/: project.pbxproj
(+41 files in other folders)
